--- a/Tutorial_workflow_ucla.ipynb
+++ b/Tutorial_workflow_ucla.ipynb
@@ -27,7 +27,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standard Workflow\n"
+    "## Standard Workflow\n",
+    "\n",
+    "Ensure that the python environment `autoqchem` is designated as the kernel for this notebook."
+    "\n",
+    "*If not, select \"Kernel > Change kernel > autoqchem\". Once the kernel loads, you can run a cell of code by clicking on it and then \"Shift + Enter\".*"
    ]
   },
   {
