Revert "migrate notebook from auto-qchem repo"
This reverts commit b9c3c20edca4cb9763a865d379bd64ed031efc9c.

--- a/Tutorial_creating_descriptor_sets_ucla.ipynb
+++ b/Tutorial_creating_descriptor_sets_ucla.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T15:48:18.213268Z",
-     "start_time": "2023-05-19T15:48:18.206862Z"
+     "start_time": "2023-05-19T15:48:18.206862Z",
+     "end_time": "2023-05-19T15:48:18.213268Z"
     }
    },
    "outputs": [],
@@ -21,26 +21,6 @@
     "from autoqchem.molecule import molecule\n",
     "from autoqchem.sge_manager import sge_manager\n",
     "from autoqchem.draw_utils import draw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# packages in environment at /opt/anaconda3/envs/autoqchem-test:\r\n",
-      "#\r\n",
-      "# Name                    Version                   Build  Channel\r\n",
-      "auto-qchem                1.3.2                     dev_0    <develop>\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "! conda list auto-qchem"
    ]
   },
   {
@@ -56,8 +36,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T15:48:19.940579Z",
-     "start_time": "2023-05-19T15:48:19.936532Z"
+     "start_time": "2023-05-19T15:48:19.936532Z",
+     "end_time": "2023-05-19T15:48:19.940579Z"
     }
    },
    "outputs": [],
@@ -78,8 +58,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T15:56:36.922344Z",
-     "start_time": "2023-05-19T15:56:36.914799Z"
+     "start_time": "2023-05-19T15:56:36.914799Z",
+     "end_time": "2023-05-19T15:56:36.922344Z"
     }
    },
    "outputs": [],
@@ -101,95 +81,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T15:56:38.304285Z",
-     "start_time": "2023-05-19T15:56:38.292790Z"
+     "start_time": "2023-05-19T15:56:38.292790Z",
+     "end_time": "2023-05-19T15:56:38.304285Z"
     }
    },
    "outputs": [],
    "source": [
     "mols = [molecule(s) for s in smiles_str_list]\n",
     "#mols = [molecule(s, num_conf=10) for s in smiles_str_list]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sometimes rdkit cannot handle the conformer generation of large molecules, especially if they have long alkyl chains. e.g."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "big_s = 'CCCCCCCCC1=CC2=CC(C3=CN(C45CC6CC(C5)CC(C4)C6)N=N3)=C7OP(O)(OC8=C(C7=C2C=C1)C9=CC=C(C=C9C=C8C%10=CN(C%11%12CC%13CC(C%12)CC(C%11)C%13)N=N%10)CCCCCCCC)=O'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Bad Conformer Id",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m big_mol \u001b[38;5;241m=\u001b[39m \u001b[43mmolecule\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbig_s\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/general-code/doyle-lab-ucla/auto-qchem/autoqchem/molecule.py:48\u001b[0m, in \u001b[0;36mmolecule.__init__\u001b[0;34m(self, smiles, num_conf, engine, rdkit_ff, ob_gen3D_option, large_mol)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m# run conformer generation\u001b[39;00m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m engine \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrdkit\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39melements, \\\n\u001b[1;32m     46\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconformer_coordinates, \\\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconnectivity_matrix, \\\n\u001b[0;32m---> 48\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcharges \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_conformations_from_rdkit\u001b[49m\u001b[43m(\u001b[49m\u001b[43msmiles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msmiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_conf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_conf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrdkit_ff\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrdkit_ff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlarge_mol\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlarge_mol\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m engine \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mopenbabel\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     51\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39melements, \\\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconformer_coordinates, \\\n\u001b[1;32m     53\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconnectivity_matrix, \\\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcharges \u001b[38;5;241m=\u001b[39m generate_conformations_from_openbabel(smiles\u001b[38;5;241m=\u001b[39msmiles, num_conf\u001b[38;5;241m=\u001b[39mnum_conf,\n\u001b[1;32m     55\u001b[0m                                                          ob_gen3D_option\u001b[38;5;241m=\u001b[39mob_gen3D_option)\n",
-      "File \u001b[0;32m~/Desktop/general-code/doyle-lab-ucla/auto-qchem/autoqchem/rdkit_utils.py:142\u001b[0m, in \u001b[0;36mgenerate_conformations_from_rdkit\u001b[0;34m(smiles, num_conf, rdkit_ff, large_mol)\u001b[0m\n\u001b[1;32m    140\u001b[0m AllChem\u001b[38;5;241m.\u001b[39mEmbedMultipleConfs(rdmol, num_conf, params)\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m rdkit_ff \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMMFF94\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 142\u001b[0m     \u001b[43mAllChem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMMFFOptimizeMoleculeConfs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrdmol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmmffVariant\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMMFF94\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnumThreads\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_threads\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    143\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m rdkit_ff \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMMFF94s\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    144\u001b[0m     AllChem\u001b[38;5;241m.\u001b[39mMMFFOptimizeMoleculeConfs(rdmol, mmffVariant\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMMFF94s\u001b[39m\u001b[38;5;124m\"\u001b[39m, numThreads\u001b[38;5;241m=\u001b[39mn_threads)\n",
-      "\u001b[0;31mValueError\u001b[0m: Bad Conformer Id"
-     ]
-    }
-   ],
-   "source": [
-    "big_mol = molecule(big_s)  # bad conformer id means that 0 conformers were generated by rdkit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you see errors like this, specify `large_mol=True` when you build molecule. Autoqchem will try something else"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d564586984c42239b86319cf47eb0da",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='confId', options=(0, 1, 2, 3, 4), value=0), Output()), _dom_classe…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function autoqchem.draw_utils._graph_conf(m, confId=0, energies=[])>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "big_mol = molecule(big_s, large_mol=True)  # no more errors\n",
-    "draw(big_mol.mol)"
    ]
   },
   {
@@ -205,8 +104,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T15:56:41.025105Z",
-     "start_time": "2023-05-19T15:56:40.990012Z"
+     "start_time": "2023-05-19T15:56:40.990012Z",
+     "end_time": "2023-05-19T15:56:41.025105Z"
     }
    },
    "outputs": [],
@@ -235,8 +134,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T15:56:48.389604Z",
-     "start_time": "2023-05-19T15:56:48.378746Z"
+     "start_time": "2023-05-19T15:56:48.378746Z",
+     "end_time": "2023-05-19T15:56:48.389604Z"
     }
    },
    "outputs": [],
@@ -257,8 +156,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T15:57:02.982253Z",
-     "start_time": "2023-05-19T15:56:54.827718Z"
+     "start_time": "2023-05-19T15:56:54.827718Z",
+     "end_time": "2023-05-19T15:57:02.982253Z"
     }
    },
    "outputs": [],
@@ -279,8 +178,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T15:57:05.300941Z",
-     "start_time": "2023-05-19T15:57:04.722566Z"
+     "start_time": "2023-05-19T15:57:04.722566Z",
+     "end_time": "2023-05-19T15:57:05.300941Z"
     }
    },
    "outputs": [],
@@ -290,18 +189,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### create job files locally"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-19T15:57:36.266902Z",
-     "start_time": "2023-05-19T15:57:35.554307Z"
+     "start_time": "2023-05-19T15:57:35.554307Z",
+     "end_time": "2023-05-19T15:57:36.266902Z"
     }
    },
    "outputs": [],
@@ -312,99 +213,113 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### submit jobs to cluster"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-19T15:57:43.690322Z",
-     "start_time": "2023-05-19T15:57:41.498824Z"
-    }
-   },
    "outputs": [],
    "source": [
     "sm.submit_jobs()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-19T15:57:41.498824Z",
+     "end_time": "2023-05-19T15:57:43.690322Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### check stat again, you can see all jobs submitted to cluster"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-19T16:09:05.346700Z",
-     "start_time": "2023-05-19T16:09:04.690140Z"
-    }
-   },
    "outputs": [],
    "source": [
     "sm.qstat(summary=False)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-19T16:09:04.690140Z",
+     "end_time": "2023-05-19T16:09:05.346700Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### retrieve done jobs"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-19T16:09:09.238863Z",
-     "start_time": "2023-05-19T16:09:06.594596Z"
-    }
-   },
    "outputs": [],
    "source": [
     "sm.retrieve_jobs()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-19T16:09:06.594596Z",
+     "end_time": "2023-05-19T16:09:09.238863Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### upload finished calculations"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-19T16:09:18.365042Z",
-     "start_time": "2023-05-19T16:09:11.518360Z"
-    }
-   },
    "outputs": [],
    "source": [
     "sm.upload_done_molecules_to_db(tags=[\"test_WCG\"])"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-19T16:09:11.518360Z",
+     "end_time": "2023-05-19T16:09:18.365042Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 64-bit ('3.9.13')",
    "language": "python",
    "name": "python3"
   },
@@ -418,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
