--- a/Tutorial_workflow_ucla.ipynb
+++ b/Tutorial_workflow_ucla.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-19T15:48:18.213268Z",
@@ -63,6 +63,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Tip:</b> To check auto-qchem version number, run the following:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! conda list auto-qchem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Set level of logging\n",
     "Auto-QChem prints out messages with helpful information. You can set the verbosity level of the messages: \n",
     "- \"INFO\" is a good setting for first time users. \n",
@@ -71,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-19T15:48:19.940579Z",
@@ -97,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-19T15:56:36.922344Z",
@@ -120,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-19T15:56:38.304285Z",
@@ -143,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-19T15:56:41.025105Z",
@@ -152,20 +170,112 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mols' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-b5cc88d6e732>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmols\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mols' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "019501c460874654b13b1c77341cd626",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='confId', options=(0,), value=0), Output()), _dom_classes=('widget-…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c73f5753b5c4d21b1ade8fb2f56fa7a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='confId', options=(0,), value=0), Output()), _dom_classes=('widget-…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "for m in mols:\n",
     "    draw(m.mol) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Tip:</b> sometimes rdkit cannot handle the conformer generation of large molecules, especially if they have long alkyl chains:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Bad Conformer Id",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m big_s \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCCCCCCCCC1=CC2=CC(C3=CN(C45CC6CC(C5)CC(C4)C6)N=N3)=C7OP(O)(OC8=C(C7=C2C=C1)C9=CC=C(C=C9C=C8C\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m10=CN(C\u001b[39m\u001b[38;5;132;01m%11%\u001b[39;00m\u001b[38;5;124m12CC\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m13CC(C\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m12)CC(C\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m11)C\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m13)N=N\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m10)CCCCCCCC)=O\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m big_mol \u001b[38;5;241m=\u001b[39m \u001b[43mmolecule\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbig_s\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/general-code/doyle-lab-ucla/auto-qchem/autoqchem/molecule.py:48\u001b[0m, in \u001b[0;36mmolecule.__init__\u001b[0;34m(self, smiles, num_conf, engine, rdkit_ff, ob_gen3D_option, large_mol)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m# run conformer generation\u001b[39;00m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m engine \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrdkit\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39melements, \\\n\u001b[1;32m     46\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconformer_coordinates, \\\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconnectivity_matrix, \\\n\u001b[0;32m---> 48\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcharges \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_conformations_from_rdkit\u001b[49m\u001b[43m(\u001b[49m\u001b[43msmiles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msmiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_conf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_conf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrdkit_ff\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrdkit_ff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlarge_mol\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlarge_mol\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m engine \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mopenbabel\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     51\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39melements, \\\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconformer_coordinates, \\\n\u001b[1;32m     53\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconnectivity_matrix, \\\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcharges \u001b[38;5;241m=\u001b[39m generate_conformations_from_openbabel(smiles\u001b[38;5;241m=\u001b[39msmiles, num_conf\u001b[38;5;241m=\u001b[39mnum_conf,\n\u001b[1;32m     55\u001b[0m                                                          ob_gen3D_option\u001b[38;5;241m=\u001b[39mob_gen3D_option)\n",
+      "File \u001b[0;32m~/Desktop/general-code/doyle-lab-ucla/auto-qchem/autoqchem/rdkit_utils.py:142\u001b[0m, in \u001b[0;36mgenerate_conformations_from_rdkit\u001b[0;34m(smiles, num_conf, rdkit_ff, large_mol)\u001b[0m\n\u001b[1;32m    140\u001b[0m AllChem\u001b[38;5;241m.\u001b[39mEmbedMultipleConfs(rdmol, num_conf, params)\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m rdkit_ff \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMMFF94\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 142\u001b[0m     \u001b[43mAllChem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMMFFOptimizeMoleculeConfs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrdmol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmmffVariant\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMMFF94\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnumThreads\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_threads\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    143\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m rdkit_ff \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMMFF94s\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    144\u001b[0m     AllChem\u001b[38;5;241m.\u001b[39mMMFFOptimizeMoleculeConfs(rdmol, mmffVariant\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMMFF94s\u001b[39m\u001b[38;5;124m\"\u001b[39m, numThreads\u001b[38;5;241m=\u001b[39mn_threads)\n",
+      "\u001b[0;31mValueError\u001b[0m: Bad Conformer Id"
+     ]
+    }
+   ],
+   "source": [
+    "big_s = 'CCCCCCCCC1=CC2=CC(C3=CN(C45CC6CC(C5)CC(C4)C6)N=N3)=C7OP(O)(OC8=C(C7=C2C=C1)C9=CC=C(C=C9C=C8C%10=CN(C%11%12CC%13CC(C%12)CC(C%11)C%13)N=N%10)CCCCCCCC)=O'\n",
+    "big_mol = molecule(big_s) # bad conformer id means that 0 conformers were generated by rdkit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you see errors like this, specify `large_mol=True` when you build molecule. Autoqchem will try something else. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "303630aac8bc485d9c51a62073d6aa75",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='confId', options=(0, 1, 2, 3, 4), value=0), Output()), _dom_classe…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function autoqchem.draw_utils._graph_conf(m, confId=0, energies=[])>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_mol = molecule(big_s, large_mol=True)  # no more errors\n",
+    "draw(big_mol.mol)"
    ]
   },
   {
@@ -233,9 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Create Gaussian job files\n",
     "\n",
@@ -302,9 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Submit jobs\n",
     "\n",
@@ -318,8 +424,7 @@
     "ExecuteTime": {
      "end_time": "2023-05-19T15:57:43.690322Z",
      "start_time": "2023-05-19T15:57:41.498824Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -337,9 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### View queue status\n",
     "\n",
@@ -353,8 +456,7 @@
     "ExecuteTime": {
      "end_time": "2023-05-19T16:09:05.346700Z",
      "start_time": "2023-05-19T16:09:04.690140Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -374,18 +476,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "You can continue to monitor your running jobs with ```qstat()``` or check the workflow statistics with ```get_job_stats()``` at any time."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Retrieve finished jobs\n",
     "\n",
@@ -399,8 +497,7 @@
     "ExecuteTime": {
      "end_time": "2023-05-19T16:09:09.238863Z",
      "start_time": "2023-05-19T16:09:06.594596Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -419,9 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Upload completed calculations to database\n",
     "\n",
@@ -437,8 +532,7 @@
     "ExecuteTime": {
      "end_time": "2023-05-19T16:09:18.365042Z",
      "start_time": "2023-05-19T16:09:11.518360Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -458,9 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### All done!\n",
     "\n",
@@ -655,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.12 ('autoqchem')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -669,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
